[gd_scene load_steps=66 format=3 uid="uid://bgn4ui30ou8ox"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_hot88"]
[ext_resource type="Shader" path="res://vignette.gdshader" id="2_qoafh"]
[ext_resource type="Script" path="res://Player/TetherManager.gd" id="2_t8042"]
[ext_resource type="Script" path="res://Player/FSM.gd" id="3_4dmle"]
[ext_resource type="Script" path="res://Player/FallFromAir.gd" id="4_3qf32"]
[ext_resource type="Script" path="res://Player/Rise.gd" id="5_u8ksi"]
[ext_resource type="Script" path="res://Player/Run.gd" id="6_apoin"]
[ext_resource type="Script" path="res://Player/Idle.gd" id="7_id7nv"]
[ext_resource type="Script" path="res://Player/FallFromGround.gd" id="8_dmcvx"]
[ext_resource type="Script" path="res://Player/LedgeMount.gd" id="9_d0ajb"]
[ext_resource type="Script" path="res://Player/GroundDash.gd" id="10_vwrh2"]
[ext_resource type="Script" path="res://Player/AirDash.gd" id="11_6obtf"]
[ext_resource type="Script" path="res://Player/WallStick.gd" id="12_db57n"]
[ext_resource type="Script" path="res://Player/WallRise.gd" id="13_mqygf"]
[ext_resource type="Script" path="res://Player/Land.gd" id="14_60gnu"]
[ext_resource type="Script" path="res://Player/FallFromWall.gd" id="14_c6syb"]
[ext_resource type="Script" path="res://Player/Superjump.gd" id="15_s366p"]
[ext_resource type="Texture2D" uid="uid://csy8viraoyx1b" path="res://Player/player sprites/bloom.png" id="16_r0xs2"]
[ext_resource type="Script" path="res://Player/TetherSwing.gd" id="17_6euqv"]
[ext_resource type="Script" path="res://Player/AnimationQueue.gd" id="18_4kitw"]
[ext_resource type="Script" path="res://Player/ThrowTether.gd" id="18_idm5g"]
[ext_resource type="Script" path="res://Player/GroundAttack1.gd" id="19_divyp"]
[ext_resource type="Script" path="res://Player/GroundAttack2.gd" id="20_3exe5"]
[ext_resource type="Script" path="res://Player/GroundAttack3.gd" id="21_su6cv"]
[ext_resource type="Shader" path="res://EnemyOutline.gdshader" id="22_arfdl"]
[ext_resource type="Texture2D" uid="uid://dufre7qupt8ey" path="res://Player/player sprites/spider18.png" id="23_gw3l1"]
[ext_resource type="Script" path="res://Player/PlayerAttackHitbox.gd" id="24_afdmi"]
[ext_resource type="Script" path="res://Player/ScreenFade.gd" id="28_6sb4k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73asn"]
size = Vector2(10, 30)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tf3t1"]
shader = ExtResource("2_qoafh")
shader_parameter/vignette_intensity = 30.0
shader_parameter/vignette_opacity = 0.01
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="Curve" id="Curve_lui7i"]
_data = [Vector2(0, 0), 0.0, 0.38657, 0, 0, Vector2(1, 1), 1.6193, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_2ahxv"]
_data = [Vector2(0, 1), 0.0, -1.3079, 0, 0, Vector2(0.739437, 0.526316), -0.747368, -0.747368, 0, 0, Vector2(1, 0), -0.574899, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_t84os"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_r7odb"]
_data = [Vector2(0, 1), 0.0, -0.522449, 0, 0, Vector2(1, 0), -1.89714, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_70xhi"]
_data = [Vector2(0, 1), 0.0, -0.597815, 0, 1, Vector2(0.757143, 0.547368), -1.21362, -1.21362, 0, 0, Vector2(1, 0), -2.25387, 0.0, 1, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_72u63"]
_data = [Vector2(0, 0), 0.0, -0.0767123, 0, 0, Vector2(1, 0.978947), 2.59048, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_fwi8f"]
_data = [Vector2(0, 1), 0.0, -0.112281, 0, 0, Vector2(0.206731, 0), -7.54152, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_1poxn"]
_data = [Vector2(0, 1), 0.0, -1.06667, 0, 0, Vector2(0.365385, 0.0210526), -7.15228, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_up74c"]
_data = [Vector2(0, 1), 0.0, -0.592983, 0, 0, Vector2(0.673077, 0), -5.37417, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_06gl4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, -2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.150098]
}

[sub_resource type="Animation" id="Animation_f50jc"]
resource_name = "fall1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_74mwx"]
resource_name = "fall2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_us6kq"]
resource_name = "fall3"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_u57qw"]
resource_name = "groundattack1"
length = 0.2
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [26, 27, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(13.5, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(23, -2)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.150098]
}

[sub_resource type="Animation" id="Animation_rcjpb"]
resource_name = "groundattack2"
length = 0.2
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.64585]
}

[sub_resource type="Animation" id="Animation_7c2in"]
resource_name = "groundattack3"
length = 0.2
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [32, 33, 34]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite/PlayerAttackHitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(15, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, -4)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerSprite/PlayerAttackHitbox/GPUParticles2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.94604]
}

[sub_resource type="Animation" id="Animation_aeshu"]
resource_name = "grounddash"
length = 0.385
loop_mode = 1
step = 0.0642
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0642, 0.1284, 0.1926, 0.2568, 0.321),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_rdeck"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_x332t"]
resource_name = "land"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_6nrai"]
resource_name = "mount"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_0stb7"]
resource_name = "rise1"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_l8c5j"]
resource_name = "rise2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_x0o06"]
resource_name = "rise3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_1uhys"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_tfxui"]
resource_name = "wallcling1"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_nvbjr"]
resource_name = "wallcling2"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ptgp5"]
_data = {
"RESET": SubResource("Animation_06gl4"),
"fall1": SubResource("Animation_f50jc"),
"fall2": SubResource("Animation_74mwx"),
"fall3": SubResource("Animation_us6kq"),
"groundattack1": SubResource("Animation_u57qw"),
"groundattack2": SubResource("Animation_rcjpb"),
"groundattack3": SubResource("Animation_7c2in"),
"grounddash": SubResource("Animation_aeshu"),
"idle": SubResource("Animation_rdeck"),
"land": SubResource("Animation_x332t"),
"mount": SubResource("Animation_6nrai"),
"rise1": SubResource("Animation_0stb7"),
"rise2": SubResource("Animation_l8c5j"),
"rise3": SubResource("Animation_x0o06"),
"run": SubResource("Animation_1uhys"),
"wallcling1": SubResource("Animation_tfxui"),
"wallcling2": SubResource("Animation_nvbjr")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_adkus"]
shader = ExtResource("22_arfdl")
shader_parameter/fill = Color(1, 1, 1, 0)
shader_parameter/color = Color(0.00784314, 0, 0.0117647, 0.733333)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = true
shader_parameter/add_margins = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvikx"]
size = Vector2(17, 22)

[sub_resource type="Curve" id="Curve_4mf8d"]
max_value = 100.0
_data = [Vector2(0, 0), 0.0, 100.0, 0, 1, Vector2(1, 100), 100.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_30kn3"]
curve = SubResource("Curve_4mf8d")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_j438h"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
spread = 2.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 356.25
initial_velocity_max = 400.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 55.209
damping_max = 55.209
damping_curve = SubResource("CurveTexture_30kn3")
angle_min = -285.0
angle_max = 120.0

[sub_resource type="Animation" id="Animation_oxh3u"]
resource_name = "fade"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_su3e2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mx0fh"]
_data = {
"RESET": SubResource("Animation_su3e2"),
"fade": SubResource("Animation_oxh3u")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_hot88")

[node name="TetherCast" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)

[node name="MiddleCast" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)

[node name="BottomCast" type="RayCast2D" parent="."]
position = Vector2(0, 15)
target_position = Vector2(50, 0)

[node name="TopCast" type="RayCast2D" parent="."]
position = Vector2(0, 4.81)
target_position = Vector2(50, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_73asn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 10)
offset = Vector2(0, -15)
limit_left = -200
limit_right = 200
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_vertical_enabled = true

[node name="vignette" type="Panel" parent="Camera2D"]
visible = false
z_index = 3
material = SubResource("ShaderMaterial_tf3t1")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -255.0
offset_right = 261.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TetherManager" type="Node" parent="."]
script = ExtResource("2_t8042")

[node name="Line2D" type="Line2D" parent="TetherManager"]
z_index = -1
width = 1.0
default_color = Color(0.603922, 0.603922, 0.603922, 0.752941)

[node name="FSM" type="Node" parent="."]
script = ExtResource("3_4dmle")
unlocked_walljump = true
coyote_time = 0.1
attack_delay_length = 0.4
cast_distance = 7.0
player_knockback_speed = 200.0
attack1_enemy_knockback = 100.0
attack2_enemy_knockback = 100.0
attack3_enemy_knockback = 100.0

[node name="FallFromAir" type="Node" parent="FSM"]
script = ExtResource("4_3qf32")
fall_speed = 250.0
time_to_max_fall_speed = 0.3
velocity_curve = SubResource("Curve_lui7i")
air_speed = 110.0

[node name="Rise" type="Node" parent="FSM"]
script = ExtResource("5_u8ksi")
jump_strength = 195.0
jump_time = 0.4
velocity_curve = SubResource("Curve_2ahxv")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("6_apoin")
velocity_curve = SubResource("Curve_t84os")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("7_id7nv")

[node name="FallFromGround" type="Node" parent="FSM"]
script = ExtResource("8_dmcvx")

[node name="LedgeMount" type="Node" parent="FSM"]
script = ExtResource("9_d0ajb")
mount_speed = 45

[node name="GroundDash" type="Node" parent="FSM"]
script = ExtResource("10_vwrh2")
dash_strength = 235.0
dash_time = 0.3
velocity_curve = SubResource("Curve_r7odb")

[node name="AirDash" type="Node" parent="FSM"]
script = ExtResource("11_6obtf")

[node name="WallRise" type="Node" parent="FSM"]
script = ExtResource("13_mqygf")
jump_strength = 190.0
outward_jump_strength_ratio = 0.65
jump_time = 0.3
velocity_curve = SubResource("Curve_70xhi")
time_until_controllable = 0.5

[node name="WallStick" type="Node" parent="FSM"]
script = ExtResource("12_db57n")
fall_speed = 85.0
time_to_max_fall_speed = 0.2
velocity_curve = SubResource("Curve_72u63")

[node name="FallFromWall" type="Node" parent="FSM"]
script = ExtResource("14_c6syb")

[node name="Land" type="Node" parent="FSM"]
script = ExtResource("14_60gnu")

[node name="Superjump" type="Node" parent="FSM"]
script = ExtResource("15_s366p")

[node name="TetherSwing" type="Node" parent="FSM"]
script = ExtResource("17_6euqv")

[node name="ThrowTether" type="Node" parent="FSM"]
script = ExtResource("18_idm5g")
freeze_time = 0.3

[node name="GroundAttack1" type="Node" parent="FSM"]
script = ExtResource("19_divyp")
velocity_curve = SubResource("Curve_fwi8f")
forward_speed = 230.0

[node name="GroundAttack2" type="Node" parent="FSM"]
script = ExtResource("20_3exe5")
velocity_curve = SubResource("Curve_1poxn")
forward_speed = 250.0

[node name="GroundAttack3" type="Node" parent="FSM"]
script = ExtResource("21_su6cv")
velocity_curve = SubResource("Curve_up74c")
forward_speed = 250.0

[node name="debug_text" type="Label" parent="."]
visible = false
offset_left = -19.0
offset_top = -35.0
offset_right = 20.0
offset_bottom = -9.0
text = "test"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ptgp5")
}

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_adkus")
texture = ExtResource("23_gw3l1")
hframes = 35

[node name="PlayerAttackHitbox" type="Area2D" parent="PlayerSprite"]
collision_layer = 16
collision_mask = 8
script = ExtResource("24_afdmi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/PlayerAttackHitbox"]
position = Vector2(15, 1)
shape = SubResource("RectangleShape2D_jvikx")
disabled = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="PlayerSprite/PlayerAttackHitbox"]
z_index = 1
position = Vector2(23, -2)
rotation = -0.150098
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_j438h")
lifetime = 0.15
one_shot = true
preprocess = 0.08
explosiveness = 1.0
randomness = 1.0
trail_enabled = true
trail_lifetime = 0.05

[node name="bloom" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.12549)
z_index = -1
texture_filter = 1
scale = Vector2(2.5625, 2.5625)
texture = ExtResource("16_r0xs2")

[node name="AnimationQueue" type="Node" parent="."]
script = ExtResource("18_4kitw")

[node name="ScreenFade" type="Node" parent="."]
script = ExtResource("28_6sb4k")

[node name="ColorRect" type="ColorRect" parent="ScreenFade"]
offset_left = -332.0
offset_top = -200.0
offset_right = 352.0
offset_bottom = 232.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenFade"]
libraries = {
"": SubResource("AnimationLibrary_mx0fh")
}

[connection signal="area_entered" from="PlayerSprite/PlayerAttackHitbox" to="PlayerSprite/PlayerAttackHitbox" method="_on_area_entered"]
[connection signal="body_entered" from="PlayerSprite/PlayerAttackHitbox" to="PlayerSprite/PlayerAttackHitbox" method="_on_body_entered"]
